@@ -2,6 +2,10 @@ Revision history for BSON
 
 {{$NEXT}}
 
+    [BUG FIXES]
+
+    - Improved OID counter thread-safety
+
 0.13      2015-04-07 12:02:29-04:00 America/New_York (TRIAL RELEASE)
 
     [BUG FIXES]
